# edu-chain

./: Cargo.toml  rust-toolchain.toml  rustfmt.toml
chain-rpc/rpc/: Cargo.toml
chain-rpc/rpc/src/: lib.rs  university.rs
chain-rpc/runtime-api/: Cargo.toml
chain-rpc/runtime-api/src/: lib.rs  university.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/checked-validation/: Cargo.toml
pallets/checked-validation/src/: lib.rs
pallets/exam/: Cargo.toml
pallets/exam/src/: lib.rs
pallets/intake/: Cargo.toml
pallets/intake/src/: lib.rs
pallets/lecture/: Cargo.toml
pallets/lecture/src/: lib.rs
pallets/professor/: Cargo.toml
pallets/professor/src/: lib.rs
pallets/scholarship/: Cargo.toml
pallets/scholarship/src/: lib.rs
pallets/staff/: Cargo.toml
pallets/staff/src/: lib.rs
pallets/student/: Cargo.toml
pallets/student/src/: lib.rs
pallets/template/src/: lib.rs
pallets/university/: Cargo.toml
pallets/university/rpc/: Cargo.toml
pallets/university/rpc/runtime-api/: Cargo.toml
pallets/university/rpc/src/: lib.rs
pallets/university/src/: lib.rs
runtime/: Cargo.toml
runtime/development/: Cargo.toml
runtime/mainnet/: Cargo.toml
runtime/src/: lib.rs
runtime/testnet/: Cargo.toml
runtime/testnet/src/: lib.rs
traits/: Cargo.toml
traits/src/: lib.rs  pallet_provider.rs
types/: Cargo.toml
types/src/: exam.rs  intake.rs  lecture.rs  lib.rs  primitives.rs  professor.rs  scholarship.rs  student.rs  university.rs  validator.rs
