[workspace]
members = [
    "node",
    "runtime/testnet",
    "pallets/university",
    "pallets/professor",
    "pallets/student",
    "pallets/lecture",
    "pallets/exam",
    "pallets/scholarship",
    "pallets/checked-validation",
    "traits",
    "types",
	"pallets/intake",
]
[profile.release]
panic = "unwind"
