[package]
name = "traits"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
  "types/std",
  "frame-support/std",
]
